[package]
name = "client"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2024"

[dependencies]
websocket = { path = "../websocket" }
common = { path = "../common" }
tokio = { version = "*", features = ["full"] }
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio-util = "0.7.14"
tui-input = "0.11.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
rmp-serde = "1.3.0"
async-trait = "0.1.88"
