[package]
name = "client"
version.workspace = true
authors.workspace = true
description.workspace = true
edition = "2024"

[dependencies]
websocket = { path = "../websocket" }
common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
rmp-serde = { workspace = true }
tokio-rustls = { workspace = true }
rustls-native-certs = { version = "0.8.1" }
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
color-eyre = "0.6.3"
tokio-util = "0.7.14"
tui-input = "0.11.1"
async-trait = "0.1.88"
ratatui-image = "8.0.1"
