[package]
name = "server"
version.workspace = true
authors.workspace = true
edition = "2024"

[dependencies]
websocket = { path = "../websocket" }
common = { path = "../common" }
tokio = { version = "*", features = ["full"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
rmp-serde = "1.3.0"
