[package]
name = "server"
version.workspace = true
authors.workspace = true
edition = "2024"

[dependencies]
websocket = { path = "../websocket" }
common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
rmp-serde = { workspace = true }
tokio-rustls = { workspace = true }
