[package]
name = "websocket"
version.workspace = true
authors.workspace = true
edition = "2024"

[dependencies]
base64 = "0.22.1"
rand = { version = "0.9.0", features = ["thread_rng"] }
sha1 = "0.10.6"
tokio = { version = "~1.43", features = ["net", "io-util"] }

[dev-dependencies]
tokio = { version = "~1.43", features = ["rt", "net", "macros"] }
