[package]
name = "websocket"
version.workspace = true
authors.workspace = true
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["net", "io-util"] }
tokio-rustls = { workspace = true }
base64 = "0.22.1"
rand = { version = "0.9.0", features = ["thread_rng"] }
sha1 = "0.10.6"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "net", "macros"] }
